fix when content lengh is not known force content encoding chunked

--- a/cli/ws/index.html
+++ b/cli/ws/index.html
@@ -4,6 +4,7 @@
 <title>Chat Example</title>
 <script type="text/javascript">
 window.onload = function () {
+    console.log("@loaded/ws/chat")
     var conn;
     var msg = document.getElementById("msg");
     var log = document.getElementById("log");
